Changelog
=========

0.5 (unreleased)
----------------

- Nothing changed yet.


0.4 (2012-09-20)
----------------

- Fix permissions for Plone 4 [fdelia]

0.3 (2011-03-07)
----------------

- Added MANIFEST.in [WouterVH]
- Added Dutch-translation [WouterVH]
- Added z3c.autoinclude support [keul]
- Added italian translation [keul]

0.2 (2010-02-02)
----------------

- Added check to support instances without a membersfolder [jaroel]

0.1 (2008-02-01)
----------------

- Merged matth's branch that adds:

  - Filter by path
  - Dry run option
  - Sorting of usernames
  - Display userid as well as full name

- Initial release